---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2021-03-26
  Bugfixes:
    - Fixed that structures were not returning the correct item when deconstructed
  Locale:
    - Fixed several typos
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2021-03-23
  Features:
    - Added the setting "Legacy inventory sizes" to enable legacy inventory slot counts for warehouses
    - Now dependent on Factorio Library
  Changes:
    - Adjusted the check for Angel's component mode to use the Angel's component mode trigger
    - Adjusted the warehouse inventory size defaults for performance reasons; new defaults correspond to a 15%, 30%, and 45% increase for each tier over the defaults from Angel's Addons - Storage Options, down from 147%, 340%, 532%, and 725%
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2021-03-21
  Bugfixes:
    - Fixed startup error when no Angel's Addons mods are present.
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2021-03-21
  Bugfixes:
    - Fixed startup errors related to disabling warehouses while using Angel's Addons - Storage Options
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2021-03-20
  Features:
    - Added setting "Adjust icon ordering" to improve sort order of buildings in Angel's Petrochemical Processing and Angel's Bioprocessing mods, default on
  Changes:
    - Substantial code cleanup and rework of entity creation
    - Updated how Angel numerals are handled; supports upcoming numeral rework in Angel's mods