@@ -2,6 +2,10 @@
 Version: 0.4.5
 Date: ????
   Changes:
+    - Doubled the Tungsten carbide powder mixture output from 12 to 24 units, of the second tier of Tungsten cvarbide powder mixture recipe, and increased the processing time from 8 to 16 seconds to bring it into line with the first and third tier recipes; also added tier numerals
+    - Adjusted the recipe sort order for the third tier of Tungsten powder smelting, added tier numeral
+  Bugfixes:
+    - Fixed that the recipe for Zinc powder did not have ingredients; it is now properly crafted from 1 zinc ingot
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.4
 Date: 2021-03-26
